# ClawBridge

./: .gitignore  README.md  dev.sh  g4f_server.py  install.sh  models_list.json  package-lock.json  package.json  pyproject.toml  server.js  start.sh  test_g4f.py
config/: settings.example.json
docs/: LAUNCH_MODES.md  MECHANISM.md  MODELS.md  README.md  architecture.md  development.md  installation.md  overview.md  providers-and-models.md  usage-openclaw.md
gvenv/: pyvenv.cfg
handlers/: chat.js
public/: __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  index.html  index.txt
public/_next/static/chunks/: 2f2d54fefe9e8aa5.js  567ab94dea04dd44.js  8f308f83baf5198c.js  a6dad97d9634a72d.js.map  (+4 more)
public/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
services/: ToolService.js
src/api/: routes.js
src/api/controllers/: ChatController.js
src/core/: App.js  Config.js  Logger.js
src/providers/: BaseProvider.js  G4FProvider.js  GeminiProvider.js  GroqProvider.js  PollinationsProvider.js  PuterProvider.js
src/services/: ChatService.js  TestService.js
utils/: content.js  formatters.js  logger.js  parsers.js
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: console-sidebar.tsx
web/components/ui/: badge.tsx
web/components/views/: ArenaView.tsx  connectivity-view.tsx  dashboard-view.tsx  logs-view.tsx  playground-view.tsx  settings-view.tsx
