[project]
name = "clawbridge"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "g4f>=7.0.0",
    "requests>=2.32.5",
    "curl-cffi>=0.14.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
